# ml-lab

./: .gitignore  README.md  flake.nix  pyproject.toml  ruff.toml  test.md
Notes/: Numpy_Base.ipynb  Pandas_Base.ipynb
src/: test.ipynb
src/2/: main.ipynb
src/About_Numpy/: README.md
src/Adaline/: adaline.ipynb
src/Graphics/: plots.ipynb
src/Homeworks/06/: Practice.ipynb  Theory.ipynb
src/Homeworks/NeuroDialog/: Practice.ipynb
src/Homeworks/RAG/: RAG.ipynb
src/Homeworks/RandomForest/: main.ipynb  main.py  my_submission.csv
src/Homeworks/T2S/: t2s.ipynb
src/Perceptron/: perceptron.ipynb
src/Perceptron/rustceptron/: Cargo.toml
src/Perceptron/rustceptron/src/: data.rs  main.rs  parser.rs  perceptron.rs
src/Perceptron/rustceptron/src/perceptron/: math.rs  utils.rs
src/RandomForest/: main.ipynb  main.py
src/algos/classification/marimo/: knn.py  random_forest.py
src/data/: main.py
src/notebooks/: adaline.ipynb  decision_tree.ipynb  introduction_to_sklearn.ipynb  logistic_regression.ipynb  perceptron.ipynb  regression_softmax.ipynb  regularization.ipynb  support_vector_machine.ipynb
src/notebooks/marimo/: __init__.py  test.py  utils.py
