[project]
name = "python-lab"
version = "0.1.0"
description = "Lab for Python & ML learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "ruff>=0.14.14",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "ty>=0.0.13",
]
